--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ UPLOAD_FOLDER=./backend/static/uploads
 MAX_CONTENT_LENGTH=16777216  # 16MB
 
 # Flask配置
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=
